# pipeline-workflows

./: .gitignore  CODEX_BUILD_PROMPT.md  MYTHOS_INTEGRATION_PROMPT.md  README.md  pipeline.config.example.json  pipeline.config.json  requirements.txt
contracts/: AUDIT.md  README.md  export-manifest.schema.json  model-slot.schema.json  preference-event.schema.json  schema-map.json
docs/: ADDING_STATIONS.md  ADDING_WORKFLOWS.md  ARCHITECTURE.md  GITHUB_VS_NAS_BOUNDARY.md  MODEL_NAS_LAYOUT.md  PHASED_ROLLOUT.md  PREFERENCE_ENGINE.md  STATION_DOCTRINE.md  TROUBLESHOOTING.md  architecture.md  claude-cli-operating-pattern.md  engine-import-map.md  karpathy-wiki-layer.md  model-stations.md  preference-layer.md  reciprocal-signals.md  repo-packaging.md  routing-contract.md  rubric-output-schema.md  station-contract.md  vault-page-architecture.md
engines/: __init__.py  threshold_engine.py
exports/: README.md
models/: MODEL_FALLBACKS.json  MODEL_HEALTH.json  MODEL_REGISTRY.json  MODEL_ROOT_MIGRATION_PACKET.json  README.md  preference-chain.json
preferences/: defaults.json  (+1 more)
stations/source/Treaties/: .env.example  .gitignore  DOCKER.md  README.md  RUN.bat  RUN_PIPELINE.bat  check_deps.py  check_papers.py  create_db.py  docker-compose.full.yml  docker-compose.yml  ingest_and_run.py  pyproject.toml  run_einstein.py  run_pipeline.py
stations/source/Treaties/docs/: BUILD_PLAN.md
stations/source/Treaties/scripts/: import_sample.py  sample_paper.txt  seed_axioms.py
stations/source/Treaties/tests/: test_scoring.py
stations/source/link-research.station/: .gitignore  PROJECT_MAP.md  README.REMOTE_PLACEHOLDER_20260601.md  README.md  RUN.bat  pyproject.toml  run_engine.bat
stations/source/link-research.station/config/: run_profile.example.json  source_role_rules.example.json
stations/source/link-research.station/scripts/: build_theophysics_intake_workbook.py  run_engine.py  run_nonwiki_dedupe.py  run_nonwiki_enrichment_demo.py
stations/source/link-research.station/src/link_research_engine/: __init__.py  __main__.py  main.py
stations/source/link-research.station/src/link_research_engine/modules/: __init__.py  classifier.py  dedupe.py  discovery.py  exporter.py  intake.py  role_engine.py  search_providers.py  theophysics_seed.py
stations/source/paper-intelligence-suite.station/: 6 terms proved grace.md  EDITORIAL_DETECTOR_README.md  INSTALL.bat  LAUNCH.bat  README.md  README_DOCKER.md  RUN.bat  RUN_7Q_GTQ.bat  RUN_LOCAL_PAPER_INTELLIGENCE.bat  SET_OPENAI_KEY.ps1  VARIABLE_INVENTORY.md  WORK_PACKAGES.md  docker-compose.yml  docker_entrypoint.py  fruit_dynamics.py  pyproject.toml  requirements-docker.txt  requirements.txt
stations/source/paper-intelligence-suite.station/lib/: __init__.py  snapshot_merge.py  snapshot_schema.py
stations/source/paper-intelligence-suite.station/schema/: schema_concept_system.sql
(+741 files in other folders)
