[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "link-research-engine"
version = "0.1.0"
description = "Modular link discovery and source research pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
